--- a/client/hanaoke/package.json
+++ b/client/hanaoke/package.json
@@ -8,13 +8,17 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/howler": "^2.2.1",
     "@types/jest": "^26.0.19",
     "@types/node": "^12.19.11",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-howler": "^3.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-howler": "^5.0.0",
     "react-scripts": "4.0.1",
+    "react-sound": "^1.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -42,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "howler": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
