--- a/client/hanaoke/package.json
+++ b/client/hanaoke/package.json
@@ -15,9 +15,13 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-howler": "^3.7.2",
+    "@types/react-router": "^5.1.9",
+    "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-howler": "^5.0.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-sound": "^1.2.0",
     "recorderjs": "^1.0.1",
