--- a/client/hanaoke/package.json
+++ b/client/hanaoke/package.json
@@ -8,16 +8,20 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/axios": "^0.14.0",
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/howler": "^2.2.1",
     "@types/jest": "^26.0.19",
     "@types/node": "^12.19.11",
     "@types/react": "^16.14.2",
+    "@types/react-audio-player": "^0.11.0",
     "@types/react-dom": "^16.9.10",
     "@types/react-howler": "^3.7.2",
     "@types/react-router": "^5.1.9",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
     "react-howler": "^5.0.0",
     "react-router": "^5.2.0",
@@ -53,6 +57,7 @@
   },
   "devDependencies": {
     "howler": "^2.2.1",
+    "http-proxy-middleware": "^1.0.6",
     "typescript": "^4.1.3"
   }
 }
