--- a/client/hanaoke/package.json
+++ b/client/hanaoke/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/axios": "^0.14.0",
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/howler": "^2.2.1",
@@ -19,6 +20,7 @@
     "@types/react-howler": "^3.7.2",
     "@types/react-router": "^5.1.9",
     "@types/react-router-dom": "^5.1.7",
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
